@@ -1,4 +1,4 @@
-#	$NetBSD: files.spi,v 1.4 2014/04/06 17:59:39 kardel Exp $
+#	$NetBSD: files.spi,v 1.5 2015/08/18 15:54:20 phx Exp $
 
 define	spibus { }
 
@@ -35,3 +35,8 @@ file	dev/spi/mcp48x1.c		mcp48x1dac
 device	mcp23s17gpio: gpiobus
 attach	mcp23s17gpio at spi
 file	dev/spi/mcp23s17.c		mcp23s17gpio
+
+# MCP3x0x ADC
+device	mcp3kadc: sysmon_envsys
+attach	mcp3kadc at spi
+file	dev/spi/mcp3k.c			mcp3kadc
